Implement upsert_rate
