# openapi_server/models/exchange_rate_base.py
@@ -1,0 +1,139 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+import re
+from openapi_server import util
+
+import re  # noqa: E501
+
+class ExchangeRateBase(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, rate_date=None, base_currency=None, quote_currency=None):  # noqa: E501
+        """ExchangeRateBase - a model defined in OpenAPI
+
+        :param rate_date: The rate_date of this ExchangeRateBase.  # noqa: E501
+        :type rate_date: date
+        :param base_currency: The base_currency of this ExchangeRateBase.  # noqa: E501
+        :type base_currency: str
+        :param quote_currency: The quote_currency of this ExchangeRateBase.  # noqa: E501
+        :type quote_currency: str
+        """
+        self.openapi_types = {
+            'rate_date': date,
+            'base_currency': str,
+            'quote_currency': str
+        }
+
+        self.attribute_map = {
+            'rate_date': 'rate_date',
+            'base_currency': 'base_currency',
+            'quote_currency': 'quote_currency'
+        }
+
+        self._rate_date = rate_date
+        self._base_currency = base_currency
+        self._quote_currency = quote_currency
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ExchangeRateBase':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ExchangeRateBase of this ExchangeRateBase.  # noqa: E501
+        :rtype: ExchangeRateBase
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def rate_date(self) -> date:
+        """Gets the rate_date of this ExchangeRateBase.
+
+        Date for which the rate applies.  # noqa: E501
+
+        :return: The rate_date of this ExchangeRateBase.
+        :rtype: date
+        """
+        return self._rate_date
+
+    @rate_date.setter
+    def rate_date(self, rate_date: date):
+        """Sets the rate_date of this ExchangeRateBase.
+
+        Date for which the rate applies.  # noqa: E501
+
+        :param rate_date: The rate_date of this ExchangeRateBase.
+        :type rate_date: date
+        """
+        if rate_date is None:
+            raise ValueError("Invalid value for `rate_date`, must not be `None`")  # noqa: E501
+
+        self._rate_date = rate_date
+
+    @property
+    def base_currency(self) -> str:
+        """Gets the base_currency of this ExchangeRateBase.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :return: The base_currency of this ExchangeRateBase.
+        :rtype: str
+        """
+        return self._base_currency
+
+    @base_currency.setter
+    def base_currency(self, base_currency: str):
+        """Sets the base_currency of this ExchangeRateBase.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :param base_currency: The base_currency of this ExchangeRateBase.
+        :type base_currency: str
+        """
+        if base_currency is None:
+            raise ValueError("Invalid value for `base_currency`, must not be `None`")  # noqa: E501
+        if base_currency is not None and len(base_currency) > 3:
+            raise ValueError("Invalid value for `base_currency`, length must be less than or equal to `3`")  # noqa: E501
+        if base_currency is not None and len(base_currency) < 3:
+            raise ValueError("Invalid value for `base_currency`, length must be greater than or equal to `3`")  # noqa: E501
+        if base_currency is not None and not re.search(r'^[A-Z]{3}$', base_currency):  # noqa: E501
+            raise ValueError(r"Invalid value for `base_currency`, must be a follow pattern or equal to `/^[A-Z]{3}$/`")  # noqa: E501
+
+        self._base_currency = base_currency
+
+    @property
+    def quote_currency(self) -> str:
+        """Gets the quote_currency of this ExchangeRateBase.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :return: The quote_currency of this ExchangeRateBase.
+        :rtype: str
+        """
+        return self._quote_currency
+
+    @quote_currency.setter
+    def quote_currency(self, quote_currency: str):
+        """Sets the quote_currency of this ExchangeRateBase.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :param quote_currency: The quote_currency of this ExchangeRateBase.
+        :type quote_currency: str
+        """
+        if quote_currency is None:
+            raise ValueError("Invalid value for `quote_currency`, must not be `None`")  # noqa: E501
+        if quote_currency is not None and len(quote_currency) > 3:
+            raise ValueError("Invalid value for `quote_currency`, length must be less than or equal to `3`")  # noqa: E501
+        if quote_currency is not None and len(quote_currency) < 3:
+            raise ValueError("Invalid value for `quote_currency`, length must be greater than or equal to `3`")  # noqa: E501
+        if quote_currency is not None and not re.search(r'^[A-Z]{3}$', quote_currency):  # noqa: E501
+            raise ValueError(r"Invalid value for `quote_currency`, must be a follow pattern or equal to `/^[A-Z]{3}$/`")  # noqa: E501
+
+        self._quote_currency = quote_currency
