# openapi_server/models/exchange_rate_upsert.py
@@ -1,0 +1,201 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server.models.transaction_side import TransactionSide
+import re
+from openapi_server import util
+
+from openapi_server.models.transaction_side import TransactionSide  # noqa: E501
+import re  # noqa: E501
+
+class ExchangeRateUpsert(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, rate_date=None, base_currency=None, quote_currency=None, rate=None, side=None):  # noqa: E501
+        """ExchangeRateUpsert - a model defined in OpenAPI
+
+        :param rate_date: The rate_date of this ExchangeRateUpsert.  # noqa: E501
+        :type rate_date: date
+        :param base_currency: The base_currency of this ExchangeRateUpsert.  # noqa: E501
+        :type base_currency: str
+        :param quote_currency: The quote_currency of this ExchangeRateUpsert.  # noqa: E501
+        :type quote_currency: str
+        :param rate: The rate of this ExchangeRateUpsert.  # noqa: E501
+        :type rate: float
+        :param side: The side of this ExchangeRateUpsert.  # noqa: E501
+        :type side: TransactionSide
+        """
+        self.openapi_types = {
+            'rate_date': date,
+            'base_currency': str,
+            'quote_currency': str,
+            'rate': float,
+            'side': TransactionSide
+        }
+
+        self.attribute_map = {
+            'rate_date': 'rate_date',
+            'base_currency': 'base_currency',
+            'quote_currency': 'quote_currency',
+            'rate': 'rate',
+            'side': 'side'
+        }
+
+        self._rate_date = rate_date
+        self._base_currency = base_currency
+        self._quote_currency = quote_currency
+        self._rate = rate
+        self._side = side
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ExchangeRateUpsert':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ExchangeRateUpsert of this ExchangeRateUpsert.  # noqa: E501
+        :rtype: ExchangeRateUpsert
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def rate_date(self) -> date:
+        """Gets the rate_date of this ExchangeRateUpsert.
+
+        Date for which the rate applies.  # noqa: E501
+
+        :return: The rate_date of this ExchangeRateUpsert.
+        :rtype: date
+        """
+        return self._rate_date
+
+    @rate_date.setter
+    def rate_date(self, rate_date: date):
+        """Sets the rate_date of this ExchangeRateUpsert.
+
+        Date for which the rate applies.  # noqa: E501
+
+        :param rate_date: The rate_date of this ExchangeRateUpsert.
+        :type rate_date: date
+        """
+        if rate_date is None:
+            raise ValueError("Invalid value for `rate_date`, must not be `None`")  # noqa: E501
+
+        self._rate_date = rate_date
+
+    @property
+    def base_currency(self) -> str:
+        """Gets the base_currency of this ExchangeRateUpsert.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :return: The base_currency of this ExchangeRateUpsert.
+        :rtype: str
+        """
+        return self._base_currency
+
+    @base_currency.setter
+    def base_currency(self, base_currency: str):
+        """Sets the base_currency of this ExchangeRateUpsert.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :param base_currency: The base_currency of this ExchangeRateUpsert.
+        :type base_currency: str
+        """
+        if base_currency is None:
+            raise ValueError("Invalid value for `base_currency`, must not be `None`")  # noqa: E501
+        if base_currency is not None and len(base_currency) > 3:
+            raise ValueError("Invalid value for `base_currency`, length must be less than or equal to `3`")  # noqa: E501
+        if base_currency is not None and len(base_currency) < 3:
+            raise ValueError("Invalid value for `base_currency`, length must be greater than or equal to `3`")  # noqa: E501
+        if base_currency is not None and not re.search(r'^[A-Z]{3}$', base_currency):  # noqa: E501
+            raise ValueError(r"Invalid value for `base_currency`, must be a follow pattern or equal to `/^[A-Z]{3}$/`")  # noqa: E501
+
+        self._base_currency = base_currency
+
+    @property
+    def quote_currency(self) -> str:
+        """Gets the quote_currency of this ExchangeRateUpsert.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :return: The quote_currency of this ExchangeRateUpsert.
+        :rtype: str
+        """
+        return self._quote_currency
+
+    @quote_currency.setter
+    def quote_currency(self, quote_currency: str):
+        """Sets the quote_currency of this ExchangeRateUpsert.
+
+        ISO-style three-letter currency code.  # noqa: E501
+
+        :param quote_currency: The quote_currency of this ExchangeRateUpsert.
+        :type quote_currency: str
+        """
+        if quote_currency is None:
+            raise ValueError("Invalid value for `quote_currency`, must not be `None`")  # noqa: E501
+        if quote_currency is not None and len(quote_currency) > 3:
+            raise ValueError("Invalid value for `quote_currency`, length must be less than or equal to `3`")  # noqa: E501
+        if quote_currency is not None and len(quote_currency) < 3:
+            raise ValueError("Invalid value for `quote_currency`, length must be greater than or equal to `3`")  # noqa: E501
+        if quote_currency is not None and not re.search(r'^[A-Z]{3}$', quote_currency):  # noqa: E501
+            raise ValueError(r"Invalid value for `quote_currency`, must be a follow pattern or equal to `/^[A-Z]{3}$/`")  # noqa: E501
+
+        self._quote_currency = quote_currency
+
+    @property
+    def rate(self) -> float:
+        """Gets the rate of this ExchangeRateUpsert.
+
+
+        :return: The rate of this ExchangeRateUpsert.
+        :rtype: float
+        """
+        return self._rate
+
+    @rate.setter
+    def rate(self, rate: float):
+        """Sets the rate of this ExchangeRateUpsert.
+
+
+        :param rate: The rate of this ExchangeRateUpsert.
+        :type rate: float
+        """
+        if rate is None:
+            raise ValueError("Invalid value for `rate`, must not be `None`")  # noqa: E501
+        if rate is not None and rate > 1.0E+10:  # noqa: E501
+            raise ValueError("Invalid value for `rate`, must be a value less than or equal to `1.0E+10`")  # noqa: E501
+        if rate is not None and rate < 1.0E-10:  # noqa: E501
+            raise ValueError("Invalid value for `rate`, must be a value greater than or equal to `1.0E-10`")  # noqa: E501
+
+        self._rate = rate
+
+    @property
+    def side(self) -> TransactionSide:
+        """Gets the side of this ExchangeRateUpsert.
+
+
+        :return: The side of this ExchangeRateUpsert.
+        :rtype: TransactionSide
+        """
+        return self._side
+
+    @side.setter
+    def side(self, side: TransactionSide):
+        """Sets the side of this ExchangeRateUpsert.
+
+
+        :param side: The side of this ExchangeRateUpsert.
+        :type side: TransactionSide
+        """
+        if side is None:
+            raise ValueError("Invalid value for `side`, must not be `None`")  # noqa: E501
+
+        self._side = side
